--- a/src/App.scss
+++ b/src/App.scss
@@ -15,15 +15,21 @@ body {
 	font-size: 13px;
 	font-family: 'Manrope', sans-serif;
 }
+p{
+	margin: 0;
+}
+h1{
+	margin: 1em 0;
+}
 div.wrapper {
+	height: 400px;
 	display:flex;
-	align-items: center;
 	border-radius: 10px;
 	overflow: hidden;
 	box-shadow: 5px 25px 30px $grayishBlue;
 	& > .main {
-		height: 100%;
-		width: 600px;
+		width: 450px;
+		margin: 0 50px 0 0;
 		display:flex;
 		flex-flow: column nowrap;
 		justify-content: space-between;
@@ -39,28 +45,40 @@ div.wrapper {
 	}
 }
 .img-wrapper {
-	width: 585px;
-	height:auto;
+	width: 400px;
+	height: 400px;
 	overflow: hidden;
+	img {
+		width: 500px;
+		height: auto;
+	}
 }
 .personal-wrapper {
-	width:100%;
 	display: flex;
 	flex-flow: row nowrap;
+	justify-content: space-between;
 	align-items: center;
 	& > .contact {
 		& > img{
-			transform: scale(40%);
+			transform: scale(150%) translateX(200%);
+
 		}
 	}
-	& > div > img {
+}
+#avatar-wrapper {
+	width:100%;
+	display: flex;
+	align-items: center;
+	& > img {
 		border-radius: 50%;
+		margin: 15px;
 		width: 55px;
 		height: auto;
 		float: left;
 	}
 	& > div > h2 {
 		font-weight: 700;
+		margin: .3em 0;
 		font-size: 1.2em;
 	}
 	& > div > p {
