added working on clikc effect of hide and show contact menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -90,15 +90,16 @@ h1{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	border-radius: 50%;
-	background: yellow url('/images/icon-share.svg') no-repeat center;
-	background-size: 60%;
 }
-	.clicked {
-		mix-blend-mode: multiply;
+.clicked {
+	background: $desaturatedDarkBlue;
+	& > img {
+		filter: sepia(100%) brightness(100%);
 	}
+}
 .share{
 	&::before{
 		content: '';
@@ -115,14 +116,14 @@ h1{
 		margin: 10px;
 	}
 	position:  absolute;
-	width: 300px;
-	height: 60px;
+	width: 0;
+	height: 0;
 	top: -100px;
 	left: 50%;
 	transform: translateX(-50%);
 	background: $veryDarkGrayishBlue;
 	border-radius: 10px;
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	h2{
@@ -132,4 +133,9 @@ h1{
 		font-weight: 400;
 		letter-spacing: 5px;
 	}
+}
+.visible {
+	width: 300px !important;
+	height: 60px !important;
+	display: flex !important;
 }
