--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,3 @@
-
 $veryDarkGrayishBlue: hsl(217,19%,35%);
 $desaturatedDarkBlue: hsl(214,17%,51%);
 $grayishBlue: hsl(212,23%,69%);
@@ -29,18 +28,6 @@ h1{
 	display:flex;
 	border-radius: 10px;
 	box-shadow: 5px 25px 30px $grayishBlue;
-	& > .main {
-		width: 450px;
-		margin: 0 50px 0 0;
-		display:flex;
-		flex-flow: column nowrap;
-		justify-content: space-between;
-		padding: 50px;
-	}
-	& > .main > h1 {
-		font-size:2em;
-		font-weight: 700;
-	}
 }
 .img-wrapper {
 	width: 400px;
@@ -86,56 +73,24 @@ h1{
 		color: $desaturatedDarkBlue;
 	}
 }
-.contact{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-}
-.clicked {
-	background: $desaturatedDarkBlue;
-	& > img {
-		filter: sepia(100%) brightness(100%);
-	}
-}
-.share{
-	&::before{
-		content: '';
-		background: $veryDarkGrayishBlue;
-		transform: translateX(-50%) rotate(45deg);
-		width: 25px;
-		height:25px;
-		position:absolute;
-		bottom:-12px;
-		left: 50%;
-		z-index:-1;
-	}
-	*{
-		margin: 10px;
-	}
-	position:  absolute;
-	width: 0;
-	height: 0;
-	top: -100px;
-	left: 50%;
-	transform: translateX(-50%);
-	background: $veryDarkGrayishBlue;
+
+@media(max-width: 1050px){
+.wrapper {
+	width: 85vw;
+	display:flex;
+	flex-flow: column;
 	border-radius: 10px;
-	display: none;
-	justify-content: center;
-	align-items: center;
-	h2{
-		color: $grayishBlue;
-		text-transform: uppercase;
-		font-size: 1.1em;
-		font-weight: 400;
-		letter-spacing: 5px;
+	box-shadow: 5px 25px 30px $grayishBlue;
+}
+
+.img-wrapper {
+	all: unset;
+	width: 100%;
+	img {
+		border-radius: 10px 10px 0 0;
+		width: 100%;
+		height: auto;
 	}
 }
-.visible {
-	width: 300px !important;
-	height: 60px !important;
-	display: flex !important;
+
 }
