--- a/src/components/content.scss
+++ b/src/components/content.scss
@@ -8,10 +8,12 @@
 	padding: 50px;
 }
 .main > h1 {
-	font-size:2em;
 	font-weight: 700;
 }
 
 @media(max-width: 1050px) {
-	
+	.main{
+		width: 100%;
+		padding: 25px;
+	}	
 }
