--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -11,6 +11,10 @@ $desaturatedDarkBlue: hsl(214,17%,51%);
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
+	transform: translateX(100%);
+	& > img{
+		transform: scale(150%);
+	}
 }
 .clicked {
 	background: $desaturatedDarkBlue;
@@ -33,12 +37,10 @@ $desaturatedDarkBlue: hsl(214,17%,51%);
 	*{
 		margin: 10px;
 	}
-	position:  absolute;
+	position: absolute;
 	width: 0;
 	height: 0;
-	top: -100px;
-	left: 50%;
-	transform: translateX(-50%);
+	transform: translate(106%, -120%);
 	background: $veryDarkGrayishBlue;
 	border-radius: 10px;
 	display: none;
@@ -57,3 +59,38 @@ $desaturatedDarkBlue: hsl(214,17%,51%);
 	height: 60px !important;
 	display: flex !important;
 }
+@media(max-width:1050px){
+.share{
+	all:initial;
+	position:  fixed;
+	bottom: 0;
+	left: -25px;
+	display: flex;
+	align-items: center;
+	height: 0;
+	width: 0;
+	overflow: hidden;
+	transform: translateY(130%);
+	background: $veryDarkGrayishBlue;
+	transition: all .4s;
+	border-radius: 0 0 10px 10px;
+	&::before{
+		all:unset;
+	}
+	}
+.visible {
+	height: 100%;
+	width: calc(100% + 40px) !important;
+	transform: initial;
+}
+.contact{
+	all: initial;
+}
+.clicked {
+	background: $grayishBlue;
+	& > img {
+	filter: sepia(100%) brightness(100%);
+		}
+	}
+}
+
