--- a/src/components/content.scss
+++ b/src/components/content.scss
@@ -13,7 +13,8 @@
 
 @media(max-width: 1050px) {
 	.main{
-		width: 100%;
-		padding: 25px;
+		width: 90%;
+		margin: 10px 25px;
+		padding: 0;
 	}	
 }
