--- a/src/components/content.scss
+++ b/src/components/content.scss
@@ -13,8 +13,10 @@
 
 @media(max-width: 1050px) {
 	.main{
-		width: 90%;
-		margin: 10px 25px;
+		width: 100%;
 		padding: 0;
+		& > *{
+			margin:  25px 25px 0;
+		}
 	}	
 }
