Changed README.md. Added proper filter to change arrow img color to white on clicked. Changes made in contace.scss

--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -12,25 +12,20 @@ $desaturatedDarkBlue: hsl(214,17%,51%);
 	height: 40px;
 	border-radius: 50%;
 	transform: translateX(100%);
-	& > img{
+	z-index: 1;
+	img{
 		transform: scale(150%);
 	}
 }
 .clicked {
 	background: $desaturatedDarkBlue;
-	& > img {
-		filter: sepia(100%) brightness(100%);
+	img {
+		filter: brightness(0) invert(1);
 	}
 }
 @media(max-width:1050px){
 .contact{
-	all: initial;
+	transform: unset;
 }
-.clicked {
-	background: $grayishBlue;
-	& > img {
-	filter: sepia(100%) brightness(100%);
-		}
-	}
 }
 
